# calzado

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/simulacioncalzado/: corte_guarnicion.py  hiperparametros.py  suela_plantilla.py
src/tmp/: main.py
tests/: test_hiperametros.py
