[metadata]
name = tmp
description = tmp
author = tmp

[options]
packages = 
    tmp
install_requires = 
    importlib-metadata<5.0
python_requires =  >=3.6
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
simulacioncalzado = py.typed

[flake8]
max-line-length = 160
